# sbom-signing-best-practices

./: .gitignore  .markdownlint.json  CONTRIBUTING.md  README.md
.github/: CODEOWNERS
.github/workflows/: go.yml  java.yml  javascript.yml  lint.yml  python.yml  rust.yml
go/: README.md  go.mod  go.sum  hash.go  hash_test.go
java/: README.md  pom.xml
javascript/: README.md  eslint.config.js  hash.js  hash.test.js  package-lock.json  package.json
python/: .pre-commit-config.yaml  README.md  hash.py  requirements.txt  test_hash.py
rust/: Cargo.toml  README.md
rust/src/: lib.rs
rust/tests/: harness.rs
scripts/: json-tool.js  script.sh
specs/: README.md  hashing-rules.md
test-vectors/: README.md  manifest.json
test-vectors/cyclonedx-1.7/json/: authenticity-verification-canonical.cdx.json  authenticity-verification-min.cdx.json  authenticity-verification-pretty.cdx.json  authenticity-verification.cdx.json  identify-known-vulnerabilities-canonical.cdx.json  identify-known-vulnerabilities-min.cdx.json  identify-known-vulnerabilities-pretty.cdx.json  identify-known-vulnerabilities.cdx.json  integrity-verification-min.cdx.json  integrity-verification-pretty.cdx.json  integrity-verification.cdx.json  optimize-remediation-efforts-min.cdx.json  optimize-remediation-efforts-pretty.cdx.json  optimize-remediation-efforts.json  pedigree-canonical.cdx.json  pedigree-min.cdx.json  pedigree-pretty.cdx.json  pedigree.json  provenance-min.cdx.json  provenance-pretty.cdx.json  provenance.cdx.json  vulnerability-disclosure-min.cdx.json  vulnerability-disclosure.cdx.json  (+5 more)
(+95 files in other folders)
