[package]
name = "sbom-hash-rust"
version = "0.0.1"
edition = "2024"

[dependencies]
# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# RFC 8785 Canonicalization
serde_jcs = "0.1"

# Cryptography
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
# For the test harness
tokio = { version = "1.0", features = ["full"] }
